--- a/package.json
+++ b/package.json
@@ -11,26 +11,19 @@
   },
   "dependencies": {
     "ms": "^2.1.1",
-    "discord.io": "^2.5.3",
     "winston-discord": "^0.2.0",
-    "winston": "^2.3.1",
-    "discord-anti-spam": "^2.0.0",
     "parse-ms": "^2.1.0",
     "quick.db": "^7.0.0-b16",
-    "discord-leveling": "^1.1.0",
     "discord-economy": "^1.1.6",
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
-    "figlet": "^1.2.1",
     "install": "^0.12.2",
-    "isgd": "^1.1.3",
     "moment-duration-format": "^2.2.2",
     "path": "^0.12.7",
     "readline": "^1.3.0",
     "replaceall": "^0.1.6",
     "sequelize": "^5.1.1",
-    "sqlite3": "^4.0.6",
-    "superagent": "^4.1.0"
+    "sqlite3": "^4.0.6"
   },
   "engines": {
     "node": "8.x"
